# raylab

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  environment-new.yml  environment.yml  pylintrc  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: poetry-package.yml  poetry-publish.yml  python-package.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: naf_exploration_experiment.py  pg_cartpole_defaults.py  pg_defaults.py  pg_navigation_defaults.py  svg_inf_cartpole_defaults.py  svg_inf_defaults.py  svg_inf_navigation_defaults.py  svg_one_cartpole_defaults.py  svg_one_navigation_defaults.py
examples/ACKTR/: cheetah_defaults.py  mujoco_cheetah.py  mujoco_cheetah_kfac_vs_ekfac.py  pybullet_reacher.py  pybullet_walker.py
examples/BatchRL/: ib_behavior_policy.py  ib_generate_transitions.py  ib_save_experiences.py
examples/MAGE/: pusher.py
examples/MAPO/: ib_defaults.py  ib_gaussian_walks.py  ib_true_model.py  navigation.py  navigation_base.py  navigation_gaussian_walks.py  navigation_imagination_rollouts.py  navigation_learned_model.py  navigation_nondiag_cov.py  navigation_nonlinear_dynamics.py  navigation_true_model.py  reservoir_defaults.py  swingup.py  swingup_defaults.py
examples/MBPO/: swingup.py
examples/NAF/: cheetah_defaults.py  exploration_experiment.py  reacher_defaults.py
examples/PG/: cartpole_defaults.py  navigation_defaults.py
examples/SAC/: cartpole_defaults.py  cheetah.py  cheetah_defaults.py  hopper_defaults.py  mountaincar_continuous.py  nfac_pybullet_walker.py  pybullet_walker.py  reacher_defaults.py  swingup.py  walker2d.py  walker_defaults.py
examples/SOP/: cheetah.py  cheetah_defaults.py  hopper.py  hopper_defaults.py  ib_defaults.py  ib_mdp_vs_pomdp.py  ib_mdp_vs_pomdp_bignets.py  industrial_benchmark.py  swingup.py  swingup_defaults.py  walker.py  walker_defaults.py
examples/SVG(1)/: cartpole_defaults.py  cheetah_defaults.py  ib_defaults.py  invpendulum_defaults.py  navigation_defaults.py  reacher_defaults.py  realnvp_vs_gaussian_reacher.py
examples/SVG(inf)/: cartpole_defaults.py  cheetah_defaults.py  navigation_defaults.py  reacher_defaults.py
examples/SVGMaxEnt/: cheetah_defaults.py  nfmbrl_ib.py  nfmbrl_reacher.py  reacher_defaults.py
examples/SoftAC/: cartpole_defaults.py  cheetah.py  cheetah_defaults.py  hopper_defaults.py  ib_defaults.py  ib_miscalibration_only.py  mountaincar_continuous.py  nf_bullet_walker.py  nfac_pybullet_walker.py  pybullet_cheetah.py  pybullet_reacher.py  pybullet_walker.py  reacher_defaults.py  swingup.py  swingup_defaults.py  walker_defaults.py
examples/SoftSVG/: cheetah_defaults.py  nfmbrl_reacher.py  reacher_defaults.py  swingup.py
examples/TD3/: cheetah.py
examples/TRPO/: cartpole_defaults.py  cheetah_defaults.py  gaussian_cheetah.py  gaussian_swingup.py  pybullet_walker.py  real_nvp_cheetah.py  real_nvp_swimmer.py  tang_2018_cheetah.py  tang_2018_hopper.py  tang_2018_lander.py
logger/: __init__.py  flat_csv_logger.py
notebooks/: rllib_playground.ipynb
raylab/: __init__.py  options.py
raylab/agents/: __init__.py  compat.py  config.py  model_based.py  off_policy.py  options.py  registry.py  simple_trainer.py  trainer.py
raylab/algorithms/: __init__.py  off_policy.py  registry.py  trainer.py
raylab/cli/: __init__.py  best_checkpoint.py  episode_dashboard.py  evaluate_checkpoint.py  experiment.py  experiment_dashboard.py  info.py  module_dashboard.py  test_stochastic_module.py  tune_experiment.py  utils.py  viz.py
raylab/distributions/: __init__.py  diag_multivariate_normal.py  squashed_multivariate_normal.py  transforms.py
raylab/envs/: __init__.py  cartpole_stateless.py  cartpole_swingup.py  gaussian_random_walks.py  half_cheetah.py  hvac.py  navigation.py  peb_env.py  reacher.py  registry.py  reservoir.py  rewards.py  termination.py  time_aware_env.py  utils.py
raylab/execution/: __init__.py  warmup.py
raylab/logger/: __init__.py  config_json_logger.py  csv_logger.py  progress_json_logger.py  torch_tensorboard_logger.py
raylab/losses/: __init__.py  abstract.py  cdq_learning.py  daml.py  isfv_iteration.py  mage.py  mapo.py  maximum_entropy.py  mle.py  paml.py  policy_gradient.py  svg.py  utils.py
raylab/modules/: __init__.py  action.py  action_output.py  action_value_function.py  action_value_mixin.py  actor_critic.py  catalog.py  ddpg.py  ddpg_module.py  deterministic_actor_critic.py  deterministic_actor_mixin.py  diag_multivariate_normal_ops.py  diag_multivariate_normal_params.py  diag_multivariate_normal_rsample.py  dist_ops.py  fully_connected.py  made.py  mapo_module.py  maxent_model_based.py  mbddpg.py  mbsac.py  model_actor_critic.py  model_based_ddpg.py  naf_module.py  nfmbrl.py  normalized_linear.py  off_policy_nfac.py  on_policy_actor_critic.py  on_policy_nfac.py  realnvp_actor_mixin.py  sac.py  sac_module.py  simple_model_based.py  state_action_encoder.py  state_value_mixin.py  stochastic_actor_critic.py  stochastic_actor_mixin.py  stochastic_model_mixin.py  svg_module.py  svg_realnvp_actor.py  (+7 more)
raylab/policy/: __init__.py  action_dist.py  compat.py  ib_safe_policy.py  kl_coeff_mixin.py  model_based_mixin.py  off_policy.py  optimizer_collection.py  (+6 more)
scripts/: best_checkpoint.py  bokeh_surface3d.py  check_commit_message  debug_stochastic_actor.py  debug_stochastic_module.py  evaluate_checkpoint.py  experiment_dashboard.py  log_ib_vars.py  mapo_hvac_experiments.py  mapo_navigation_experiments.py  mapo_navigation_true_model.py  mapo_reservoir_experiments.py  mapo_reservoir_true_model.py  navigation_streamplot.py  plot_icaps_grid.py  plot_mapo_sop_sac.py  rollout.py  sac_setpoint_exps.py  show_ib_vars.py  test_sac_crashes.py  test_sop_crashes.py  timeit_script_module.py  train.py  tune_experiment.py
tests/: conftest.py  mock_env.py  pylintrc  test_rollout.py  test_trainer.py  test_worker.py
(+752 files in other folders)
