[tool.poetry]
name = "raylab"
version = "0.15.7"
description = "Reinforcement learning algorithms in RLlib and PyTorch."
authors = ["Ângelo Gregório Lovatto <angelolovatto@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/angelolovatto/raylab"
keywords = ["reinforcement-learning", "rllib", "deep-learning", "model-based-rl", "pytorch"]
classifiers = [
"Development Status :: 2 - Pre-Alpha",
"Intended Audience :: Developers",
"Natural Language :: English"
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
ray = {extras = ["rllib", "tune"], version = "<1.3"}
torch = "^1.5.1"
streamlit = ">=0.62,<0.81"
cachetools = {version = "^4.1.0", python = "^3.7"}
# Have to restrict bokeh version due to issue with streamlit
# https://github.com/streamlit/streamlit/issues/2156#issuecomment-815311729
bokeh = "<=2.2.2"
dataclasses-json = "^0.5.1"
opencv-python = "^4.2.0"
poetry-version = "^0.1.5"
pytorch-lightning = "^1.0"
# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
wandb = { version = "^0.10", optional = true }
dm-tree = "^0.1.5"
tabulate = "^0.8.7"
opencv-contrib-python = "^4.4.0"
sklearn = "^0.0"

[tool.poetry.extras]
wandb = ["wandb"]

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
pylint = "^2.8.2"
watchdog = "^2.0.3"
black = "^20.8b1"
tox = "^3.23.0"
sphinx = "^3.5.4"
pytest = "^6.2.3"
gym-cartpole-swingup = "^0.1.3"
pre-commit = "^2.12.1"
mypy = "^0.812"
coverage = "^5.5"
ipython = "^7.22.0"
pytest-mock = "^3.6.0"
pytest-sugar = "^0.9.4"
auto-changelog = "^0.5.3"
isort = "^5.8.0"

[tool.poetry.scripts]
raylab = "raylab.cli:raylab"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:ray:",
    "ignore::DeprecationWarning:tree:",
    "ignore::DeprecationWarning:tensorflow:",
    "ignore::DeprecationWarning:google:",
    "ignore::DeprecationWarning:flatbuffers:",
    "ignore::DeprecationWarning:wandb:",
    "ignore:pandas.util.testing is deprecated:FutureWarning",
    "ignore::DeprecationWarning:tensorboard:"
]
